# rocinante

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/rocinante-cli/: Cargo.toml
crates/rocinante-cli/src/: main.rs  repl.rs  setup.rs
crates/rocinante-core/: Cargo.toml
crates/rocinante-core/src/: brainbox.rs  interval.rs  lib.rs  provider_factory.rs  state.rs
crates/rocinante-core/src/agent/: agent.rs  events.rs  mod.rs  subagent.rs
crates/rocinante-core/src/config/: load.rs  mod.rs  schema.rs
crates/rocinante-core/src/context/: mod.rs
crates/rocinante-core/src/lsp/: client.rs  diagnostics.rs  mod.rs  tool.rs  transport.rs
crates/rocinante-core/src/mcp/: mod.rs
crates/rocinante-core/src/permissions/: engine.rs  mod.rs  rules.rs
crates/rocinante-core/src/prompt/: mod.rs
crates/rocinante-core/src/session/: mod.rs
crates/rocinante-core/src/skills/: mod.rs
crates/rocinante-core/src/skills/builtin/: code-review.md  debugging.md  deep-research.md  peer-review.md  plagiarism-check.md  proof-reading.md  writing-tests.md
crates/rocinante-core/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  registry.rs  repair.rs  traits.rs  write.rs
crates/rocinante-providers/: Cargo.toml
crates/rocinante-providers/src/: anthropic.rs  gemini.rs  lib.rs  ollama.rs  openai_compat.rs  tokens.rs
crates/rocinante-tui/: Cargo.toml
crates/rocinante-tui/src/: app.rs  driver.rs  lib.rs  markdown.rs  picker.rs  view.rs
docs/: GUIDE.md  INSTALL_HOSTING.md
scoop/: rocinante.json
scripts/: package.sh
tests/fixtures/: mcp_echo_server.py
