[package]
name = "rocinante-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes = "1"
async-stream = "0.3"
eventsource-stream = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
