[package]
name = "rocinante-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocinante-core.workspace = true
rocinante-providers.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
